Agent - fanuc iSeries/Distribution/30iHSSB/Fwlib32.h


typedef struct odbact {
    short   dummy[2] ;  
    long    data ;      
} ODBACT ;
typedef struct odbact2 {
	 short	datano;		
	 short	type;		
	 long	data[MAX_SPINDLE];	
} ODBACT2 ;
typedef struct odbaxis {
    short   dummy ;             
    short   type ;              
    long    data[MAX_AXIS] ;    
} ODBAXIS ;
typedef struct odbdy {
    short   dummy ;
    short   axis ;      
    short   alarm ;     
    short   prgnum ;    
    short   prgmnum ;   
    long    seqnum ;    
    long    actf ;      
    long    acts ;      
    union {
        struct {
            long    absolute[MAX_AXIS] ;    
            long    machine[MAX_AXIS] ;     
            long    relative[MAX_AXIS] ;    
            long    distance[MAX_AXIS] ;    
        } faxis ;
        struct {
            long    absolute ;  
            long    machine ;   
            long    relative ;  
            long    distance ;  
        } oaxis ;   
    } pos ;
} ODBDY ;
typedef struct idbwrr {
    short   datano;         
    short   type;           
    long    data[MAX_AXIS]; 
} IDBWRR;
typedef struct idbwra {
    short   datano;         
    short   type;           
    long    data[MAX_AXIS]; 
} IDBWRA;
typedef struct iodbovl {
    short   datano;             
    short   type;               
    long    data[2][MAX_AXIS];  
} IODBOVL;
typedef struct odbspn {
    short   datano;     
    short   type;       
    short   data[MAX_SPINDLE];    
} ODBSPN;
typedef struct odbpos {
    POSELM  abs;        
    POSELM  mach;       
    POSELM  rel;        
    POSELM  dist;       
} ODBPOS ;
typedef struct speedelm {
    long    data;       
    short   dec;        
    short   unit;       
    short   disp;       
    char    name;       
    char    suff;       
} SPEEDELM ;
typedef struct odbspeed {
    SPEEDELM    actf;   
    SPEEDELM    acts;   
} ODBSPEED ;
typedef struct odbspload {
    LOADELM spload;     
    LOADELM spspeed;    
} ODBSPLOAD ;
typedef struct odbdncdgn {
    short          ctrl_word;
    short          can_word;
    char           nc_file[16];
    unsigned short read_ptr;
    unsigned short write_ptr;
    unsigned short empty_cnt;
    unsigned long  total_size;
} ODBDNCDGN;
typedef struct odbup {
    short   dummy[2] ;  
    char    data[256] ; 
} ODBUP ;   
typedef struct odbbuf {
    short   dummy[2] ;  
    short   data ;      
} ODBBUF ;
typedef struct prgdir {
    char    prg_data[256] ; 
} PRGDIR ;  
typedef struct odbnc {
    union {
        struct {
            short   reg_prg ;       
            short   unreg_prg ;     
            long    used_mem ;      
            long    unused_mem ;    
        } bin ;             
        char    asc[31] ;   
    } u ;
} ODBNC ;
typedef struct odbpro {
    short   dummy[2] ;  
    short   data ;      
    short   mdata ;     
} ODBPRO ;
typedef struct odbseq {
    short   dummy[2] ;  
    long    data ;      
} ODBSEQ ;
typedef struct odbproo8 {
     short   dummy[2] ;  
     long    data ;      
     long    mdata ;     
} ODBPROO8 ;
typedef struct odbdyo8 {
    short   dummy ;
    short   axis ;       
    short   alarm ;      
    long    prgnum ;     
    long    prgmnum ;    
    long    seqnum ;     
    long    actf ;       
    long    acts ;       
    union {
        struct {
            long    absolute[MAX_AXIS] ;    
            long    machine[MAX_AXIS] ;     
            long    relative[MAX_AXIS] ;    
            long    distance[MAX_AXIS] ;    
        } faxis ;
        struct {
            long    absolute ;  
            long    machine ;   
            long    relative ;  
            long    distance ;  
        } oaxis ;   
    } pos ;
} ODBDYO8 ;
typedef struct odbpos {
	short	idata;	
	long	ldata;	
} ODBPOS;
typedef struct iodbprfadr {
    char           di_size ;
    char           di_type ;
    unsigned short di_addr ;
    short          reserve1;
    char           do_size ;
    char           do_type ;
    unsigned short do_addr ;
    short          reserve2;
    char           dgn_size ;
    char           dgn_type ;
    unsigned short dgn_addr ;
} IODBPRFADR ;
typedef struct iodbslvadr {
    char           slave_no ;
    char           di_size ;
    char           di_type ;
    unsigned short di_addr ;
    char           do_size ;
    char           do_type ;
    unsigned short do_addr ;
    char           reserve[7] ;
} IODBSLVADR ;
typedef struct odbslvst {
    unsigned char  cnfg_stat ;
    unsigned char  prm_stat ;
    char           wdg_stat ;
    unsigned char  live_stat ;
    short          ident_no ;
} ODBSLVST ;
typedef struct odbtransinfo {
    long    mas_buff_size;
    short   trans_start_reqflag;
    short   trans_end_reqflag;
    short   trans_start_respflag;
    short   trans_end_respflag;
    long    all_transfer_size;
    short   data_id;
    short   reserve;
    long    data_write_pt;
    long    data_read_pt;
    long    accumulation_counter;
    short   forwarding_status;
} ODBTRANSINFO ;
typedef struct _tcpprm {
	char OwnIPAddress[16];
	char SubNetMask[16];
	char RouterIPAddress[16];
} TCPPRM;
typedef struct _hostprm {
	unsigned short DataServerPort;
	char           DataServerIPAddress[16];
	char           DataServerUserName[32];
	char           DataServerPassword[32];
	char           DataServerLoginDirectory[128];
} HOSTPRM;
typedef struct _ftpprm {
	char FTPServerUserName[32];
	char FTPServerPassword[32];
	char FTPServerLoginDirectory[128];
} FTPPRM;
typedef struct _etbprm {
	char  OwnMACAddress[13];
	short MaximumChannel;
	short HDDExistence;
	short NumberOfScreens;
} ETBPRM;
typedef struct _iodbetp {
	short ParameterType;
	union {
		TCPPRM  tcp;
		HOSTPRM host;
		FTPPRM  ftp;
		ETBPRM  etb;
	} prm;
} IODBETP;
typedef struct _odbetmsg {
	char title[33];
	char message[10][39];
} ODBETMSG;
typedef struct _odbhddinf {
	long file_num;
	long remainder_l;
	long remainder_h;
	char current_dir[32];
} ODBHDDINF;
typedef struct _odbhdddir {
	char  file_name[64];
	char  comment[80];
	short attribute;
	short reserved;
	long  size;
	char  date[16];
} ODBHDDDIR;
typedef struct _odbhostdir {
	char host_file[128];
} ODBHOSTDIR;
typedef struct _dsmntinfo {
	unsigned short empty_cnt;
	unsigned long  total_size;
	unsigned short ReadPtr;
	unsigned short WritePtr;
} DSMNTINFO;
typedef struct odbnode {
	long node_no;
	long io_base;
	long status;
	long cnc_type;
	char node_name[20];
} ODBNODE;
FWLIBAPI short WINAPI cnc_actf( unsigned short, ODBACT * ) ;
FWLIBAPI short WINAPI cnc_absolute( unsigned short, short, short, ODBAXIS * ) ;
FWLIBAPI short WINAPI cnc_machine( unsigned short, short, short, ODBAXIS * ) ;
FWLIBAPI short WINAPI cnc_relative( unsigned short, short, short, ODBAXIS * ) ;
FWLIBAPI short WINAPI cnc_distance( unsigned short, short, short, ODBAXIS * ) ;
FWLIBAPI short WINAPI cnc_skip( unsigned short, short, short, ODBAXIS * ) ;
FWLIBAPI short WINAPI cnc_srvdelay( unsigned short, short, short, ODBAXIS * ) ;
FWLIBAPI short WINAPI cnc_accdecdly( unsigned short, short, short, ODBAXIS * ) ;
FWLIBAPI short WINAPI cnc_rddynamic( unsigned short, short, short, ODBDY * ) ;
FWLIBAPI short WINAPI cnc_acts( unsigned short, ODBACT * ) ;
FWLIBAPI short WINAPI cnc_acts2( unsigned short, short, ODBACT2 * ) ;
FWLIBAPI short WINAPI cnc_wrrelpos( unsigned short, short, IDBWRR * ) ;
FWLIBAPI short WINAPI cnc_prstwkcd( unsigned short, short, IDBWRA * ) ;
FWLIBAPI short WINAPI cnc_rdmovrlap( unsigned short, short, short, IODBOVL * ) ;
FWLIBAPI short WINAPI cnc_canmovrlap( unsigned short, short ) ;
FWLIBAPI short WINAPI cnc_rdspload( unsigned short, short, ODBSPN * ) ;
FWLIBAPI short WINAPI cnc_rdspmaxrpm( unsigned short, short, ODBSPN * ) ;
FWLIBAPI short WINAPI cnc_rdspgear( unsigned short, short, ODBSPN * ) ;
FWLIBAPI short WINAPI cnc_absolute2( unsigned short, short, short, ODBAXIS * ) ;
FWLIBAPI short WINAPI cnc_relative2( unsigned short, short, short, ODBAXIS * ) ;
FWLIBAPI short WINAPI cnc_rdposition( unsigned short, short, short *, ODBPOS * );
FWLIBAPI short WINAPI cnc_rdspeed( unsigned short, short, ODBSPEED * );
FWLIBAPI short WINAPI cnc_rdspmeter( unsigned short, short, short *, ODBSPLOAD * );
FWLIBAPI short WINAPI cnc_rdspdlspeed( unsigned short, short, short, long * );
FWLIBAPI short WINAPI cnc_dwnstart( unsigned short ) ;
FWLIBAPI short WINAPI cnc_download( unsigned short, char *, short ) ;
FWLIBAPI short WINAPI cnc_cdownload( unsigned short, char *, short ) ;
FWLIBAPI short WINAPI cnc_dwnend( unsigned short ) ;
FWLIBAPI short WINAPI cnc_dwnend2( unsigned short, char * ) ;
FWLIBAPI short WINAPI cnc_dwnstart3( unsigned short, short ) ;
FWLIBAPI short WINAPI cnc_download3( unsigned short, long *, char * ) ;
FWLIBAPI short WINAPI cnc_dwnend3( unsigned short ) ;
FWLIBAPI short WINAPI cnc_vrfstart( unsigned short ) ;
FWLIBAPI short WINAPI cnc_verify( unsigned short, char *, short ) ;
FWLIBAPI short WINAPI cnc_cverify( unsigned short, char *, short ) ;
FWLIBAPI short WINAPI cnc_vrfend( unsigned short ) ;
FWLIBAPI short WINAPI cnc_dncstart( unsigned short ) ;
FWLIBAPI short WINAPI cnc_dnc( unsigned short, char *, short ) ;
FWLIBAPI short WINAPI cnc_dnc( unsigned short, char *, unsigned short ) ;
FWLIBAPI short WINAPI cnc_dnc( unsigned short, char *, unsigned short ) ;
FWLIBAPI short WINAPI cnc_cdnc( unsigned short, char *, short ) ;
FWLIBAPI short WINAPI cnc_cdnc( unsigned short, char *, unsigned short ) ;
FWLIBAPI short WINAPI cnc_cdnc( unsigned short, char *, unsigned short ) ;
FWLIBAPI short WINAPI cnc_dncend( unsigned short ) ;
FWLIBAPI short WINAPI cnc_dncstart2( unsigned short, char * ) ;
FWLIBAPI short WINAPI cnc_dnc2( unsigned short, long *, char * ) ;
FWLIBAPI short WINAPI cnc_dncend2( unsigned short, short ) ;
FWLIBAPI short WINAPI cnc_rddncdgndt( unsigned short, ODBDNCDGN * ) ;
FWLIBAPI short WINAPI cnc_upstart( unsigned short, short ) ;
FWLIBAPI short WINAPI cnc_upload( unsigned short, ODBUP *, unsigned short * ) ;
FWLIBAPI short WINAPI cnc_cupload( unsigned short, ODBUP *, unsigned short * ) ;
FWLIBAPI short WINAPI cnc_upend( unsigned short ) ;
FWLIBAPI short WINAPI cnc_upstart3( unsigned short, short, long, long ) ;
FWLIBAPI short WINAPI cnc_upload3( unsigned short, long *, char * ) ;
FWLIBAPI short WINAPI cnc_upend3( unsigned short ) ;
FWLIBAPI short WINAPI cnc_buff( unsigned short, ODBBUF * ) ;
FWLIBAPI short WINAPI cnc_search( unsigned short, short ) ;
FWLIBAPI short WINAPI cnc_delall( unsigned short ) ;
FWLIBAPI short WINAPI cnc_delete( unsigned short, short ) ;
FWLIBAPI short WINAPI cnc_rdprogdir( unsigned short, short, short, short, unsigned short, PRGDIR * ) ;
FWLIBAPI short WINAPI cnc_rdproginfo( unsigned short, short, short, ODBNC * ) ;
FWLIBAPI short WINAPI cnc_rdprgnum( unsigned short, ODBPRO * ) ;
FWLIBAPI short WINAPI cnc_rdseqnum( unsigned short, ODBSEQ * ) ;
FWLIBAPI short WINAPI cnc_seqsrch( unsigned short, long ) ;
FWLIBAPI short WINAPI cnc_rewind( unsigned short ) ;
FWLIBAPI short WINAPI cnc_rdblkcount( unsigned short, long * ) ;
FWLIBAPI short WINAPI cnc_upstarto8( unsigned short, long ) ;
FWLIBAPI short WINAPI cnc_searcho8( unsigned short, long ) ;
FWLIBAPI short WINAPI cnc_deleteo8( unsigned short, long ) ;
FWLIBAPI short WINAPI cnc_rdprogdiro8( unsigned short, short, long, long, unsigned short, PRGDIR * ) ;
FWLIBAPI short WINAPI cnc_rdprgnumo8( unsigned short, ODBPROO8 * ) ;
FWLIBAPI short WINAPI cnc_rddynamico8( unsigned short, short, short, ODBDYO8 * ) ;
 FWLIBAPI short WINAPI etb_rdparam(unsigned short hLib, short a, IODBETP *b);
 FWLIBAPI short WINAPI etb_wrparam(unsigned short hLib, IODBETP *a);
 FWLIBAPI short WINAPI etb_rderrmsg(unsigned short hLib, short a, ODBETMSG *b);
 FWLIBAPI short WINAPI ds_rdhddinfo(unsigned short hLib, ODBHDDINF *a);
 FWLIBAPI short WINAPI ds_rdhdddir(unsigned short hLib, char *a, long b, short *c, ODBHDDDIR *d);
 FWLIBAPI short WINAPI ds_rdhostdir(unsigned short hLib, short a, long b, short *c, ODBHOSTDIR *d, long e);
 FWLIBAPI short WINAPI ds_rdmntinfo(unsigned short hLib, short a, DSMNTINFO *b);
FWLIBAPI short WINAPI cnc_rdnodeinfo( long, ODBNODE * );
#define ODBPRO		ODBPROO8
#define cnc_upstart	cnc_upstarto8
#define cnc_search	cnc_searcho8
#define cnc_delete	cnc_deleteo8
#define cnc_rdprogdir	cnc_rdprogdiro8
#define cnc_rdprgnum	cnc_rdprgnumo8
#define cnc_rddynamic	cnc_rddynamico8