Agent - fanuc iSeries/Fwlib/160/fwlib32.bas


' read allocation address for master function
' set allocation address for master function
Type IODBPRFADR
  sDi_size As Byte
  sDi_type As Byte
  nDi_addr As Integer
  nReserve1 As Integer
  sDo_size As Byte
  sDo_type As Byte
  nDo_addr As Integer
  nReserve2 As Integer
  sDgn_size As Byte
  sDgn_type As Byte
  nDgn_addr As Integer
End Type

' read allocation address for slave function
' set allocation address for slave function
Type IODBSLVADR
 sSlave_no As Byte
 sDi_size As Byte
 sDi_type As Byte
 nDi_addr As Integer
 sDo_size As Byte
 sDo_type As Byte
 nDo_addr As Integer
 sReserve(0 To 6) As Byte
End Type

' read status for slave function
Type ODBSLVST
  sCnfg_stat As Byte
  sPrm_stat As Byte
  sWdg_stat As Byte
  sLive_stat As Byte
  nIdent_no As Integer
End Type


'-----------------------------------
' CB : CUSTOMER'S BOARD function
'-----------------------------------

Type ODBTRANSINFO
    lMas_buff_size As Long
    nTrans_start_reqflag As Integer
    nTrans_end_reqflag As Integer
    nTrans_start_respflag As Integer
    nTrans_end_respflag As Integer
    lAll_transfer_size As Long
    nData_id As Integer
    nReserve As Integer
    lData_write_pt As Long
    lData_read_pt As Long
    lAccumulation_counter As Long
    nForwarding_status As Integer
End Type


'-----------------------------------------------
' DS : Data server & Ethernet board function    
'-----------------------------------------------

' etb_rdparam : read the parameter of the Ethernet board
' etb_wrparam : write the parameter of the Ethernet board
Type TCPPRM
    sOwnIPAddress As String * 16
    sSubNetMask As String * 16
    sRouterIPAddress As String * 16
End Type

Type HOSTPRM
    nDataServerPort As Integer
    sDataServerIPAddress As String * 16
    sDataServerUserName As String * 32
    sDataServerPassword As String * 32
    sDataServerLoginDirectory As String * 128
End Type

Type FTPPRM
    sFTPServerUserName As String * 32
    sFTPServerPassword As String * 32
    sFTPServerLoginDirectory As String * 128
End Type

Type ETBPRM
    sOwnMACAddress As String * 13
    nMaximumChannel As Integer
    nHDDExistence As Integer
    nNumberOfScreens As Integer
End Type

Type IODBETP1
    nParameterType As Integer
    uTcp As TCPPRM
End Type

Type IODBETP2
    nParameterType As Integer
    uHost As HOSTPRM
End Type

Type IODBETP3
    nParameterType As Integer
    uFtp As FTPPRM
End Type

Type IODBETP4
    nParameterType As Integer
    uEtb As ETBPRM
End Type

' etb_rderrmsg : read the error message of the Ethernet board
Type ODBETMSG
    sTitle As String * 33
    sMessage(0 To 9) As String * 39
End Type

' ds_rdhddinfo : read information of the Data Server's HDD
Type ODBHDDINF
    lFile_num As Long
    lRemainder_l As Long
    lRemainder_h As Long
    sCurrent_dir As String * 32
End Type

' ds_rdhdddir : read the file list of the Data Server's HDD
Type ODBHDDDIR
    sFile_name As String * 64
    sComment As String * 80
    nAttribute As Integer
    nReserved As Integer
    lSize As Long
    sDate As String * 16
End Type

' ds_rdhostdir : read the file list of the host
Type ODBHOSTDIR
    sHost_file As String * 128
End Type

' ds_rdmntinfo : read maintenance information
Type DSMNTINFO
    nEmpty_cnt As Integer
    lTotal_size As Long
    nReadPtr As Integer
    nWritePtr As Integer
End Type

'--------------------------
' HSSB multiple connection
'--------------------------

' cnc_rdnodeinfo:read node informations
Type ODBNODE
 nNode_no As Long
 nIo_base As Long
 nStatus As Long
 nCnc_type As Long
 sNode_name As String * 20
End Type


'-------------------------------------
' CNC: Control axis / spindle related
'-------------------------------------

' read actual axis feedrate(F)
Declare Function cnc_actf% Lib "fwlib32.dll" (ByVal FlibHndl%, Odb As ODBACT)

' read absolute axis position
Declare Function cnc_absolute% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b%, Odb As ODBAXIS)

' read machine axis position
Declare Function cnc_machine% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b%, Odb As ODBAXIS)

' read relative axis position
Declare Function cnc_relative% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b%, Odb As ODBAXIS)

' read distance to go
Declare Function cnc_distance% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b%, Odb As ODBAXIS)

' read skip position
Declare Function cnc_skip% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b%, Odb As ODBAXIS)

' read servo delay value
Declare Function cnc_srvdelay% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b%, Odb As ODBAXIS)

' read acceleration/deceleration delay value
Declare Function cnc_accdecdly% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b%, Odb As ODBAXIS)

' read all dynamic data
#If ONO8D Then
Declare Function cnc_rddynamic% Lib "fwlib32.dll" Alias "cnc_rddynamico8" (ByVal FlibHndl%, ByVal a%, ByVal b%, Odb As Any)
#Else
Declare Function cnc_rddynamic% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b%, Odb As Any)
#End If

' read actual spindle speed(S)
Declare Function cnc_acts% Lib "fwlib32.dll" (ByVal FlibHndl%, Odb As ODBACT)

' read actual spindle speed(S) (All or specified)
Declare Function cnc_acts2% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, Odb As ODBACT2)

' set origin / preset relative axis position
Declare Function cnc_wrrelpos% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, Idb As IDBWRR)

' preset work coordinate
Declare Function cnc_prstwkcd% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, Idb As IDBWRA)

' read manual overlapped motion value
Declare Function cnc_rdmovrlap% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b%, Odb As IODBOVL)

' cancel manual overlapped motion value
Declare Function cnc_canmovrlap% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%)

' read load information of serial spindle
Declare Function cnc_rdspload% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, Odb As ODBSPN)

' read maximum r.p.m. ratio of serial spindle
Declare Function cnc_rdspmaxrpm% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, Odb As ODBSPN)

' read gear ratio of serial spindle
Declare Function cnc_rdspgear% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, Odb As ODBSPN)

' read absolute axis position 2
Declare Function cnc_absolute2% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b%, Odb As ODBAXIS)

' read relative axis position 2
Declare Function cnc_relative2% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b%, Odb As ODBAXIS)

' read tool position
Declare Function cnc_rdposition% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, b%, Odb As Any)

' read current speed
Declare Function cnc_rdspeed% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal nType%, Odb As ODBSPEED)

' read spindle load meter
Declare Function cnc_rdspmeter Lib "fwlib32.dll" (ByVal FlibHndl As Integer, ByVal nType As Integer, nLen As Integer, Odb As Any) As Integer
' read the spindle speed
Declare Function cnc_rdspdlspeed Lib "fwlib32.dll" (ByVal FlibHndl As Integer, ByVal a As Integer, ByVal b As Integer, c As Long) As Integer

'----------------------
' CNC: Program related
'----------------------

' start downloading NC program
Declare Function cnc_dwnstart% Lib "fwlib32.dll" (ByVal FlibHndl%)

' download NC program
Declare Function cnc_download% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a$, ByVal b%)

' download NC program(conditional)
Declare Function cnc_cdownload% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a$, ByVal b%)

' end of downloading NC program
Declare Function cnc_dwnend% Lib "fwlib32.dll" (ByVal FlibHndl%)

' end of downloading NC program
Declare Function cnc_dwnend2% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a$)

' start downloading NC program 3
Declare Function cnc_dwnstart3% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%)

' download NC program 3
Declare Function cnc_download3% Lib "fwlib32.dll" (ByVal FlibHndl%, a&, ByVal b$)

' end of downloading NC program 3
Declare Function cnc_dwnend3% Lib "fwlib32.dll" (ByVal FlibHndl%)

' start verification of NC program
Declare Function cnc_vrfstart% Lib "fwlib32.dll" (ByVal FlibHndl%)

' verify NC program
Declare Function cnc_verify% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a$, ByVal b%)

' verify NC program(conditional)
Declare Function cnc_cverify% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a$, ByVal b%)

' end of verification
Declare Function cnc_vrfend% Lib "fwlib32.dll" (ByVal FlibHndl%)

' start downloading DNC program
Declare Function cnc_dncstart% Lib "fwlib32.dll" (ByVal FlibHndl%)

' download DNC program
Declare Function cnc_dnc% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a$, ByVal b&)

' download DNC program(conditional)
Declare Function cnc_cdnc% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a$, ByVal b&)

' end of downloading DNC program
Declare Function cnc_dncend% Lib "fwlib32.dll" (ByVal FlibHndl%)

' start downloading DNC program 2
Declare Function cnc_dncstart2% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a$)

' download DNC program 2
Declare Function cnc_dnc2% Lib "fwlib32.dll" (ByVal FlibHndl%, a&, ByVal b$)

' end of downloading DNC program 2
Declare Function cnc_dncend2% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%)

' read the diagnosis data of DNC operation
Declare Function cnc_rddncdgndt% Lib "fwlib32.dll" (ByVal FlibHndl%, Odb As ODBDNCDGN)

' start uploading NC program
#If ONO8D Then
Declare Function cnc_upstart% Lib "fwlib32.dll" Alias "cnc_upstarto8" (ByVal FlibHndl%, ByVal a&)
#Else
Declare Function cnc_upstart% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%)
#End If

' upload NC program
Declare Function cnc_upload% Lib "fwlib32.dll" (ByVal FlibHndl%, Odb As ODBUP, a&)

' upload NC program(conditional)
Declare Function cnc_cupload% Lib "fwlib32.dll" (ByVal FlibHndl%, Odb As ODBUP, a&)

' end of uploading NC program
Declare Function cnc_upend% Lib "fwlib32.dll" (ByVal FlibHndl%)

' start uploading NC program 3
Declare Function cnc_upstart3% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b&, ByVal c&)

' upload NC program 3
Declare Function cnc_upload3% Lib "fwlib32.dll" (ByVal FlibHndl%, a&, ByVal b$)

' end of uploading NC program
Declare Function cnc_upend3% Lib "fwlib32.dll" (ByVal FlibHndl%)

' read buffer status for downloading/verification NC program
Declare Function cnc_buff% Lib "fwlib32.dll" (ByVal FlibHndl%, Odb As ODBBUF)

' search specified program
#If ONO8D Then
Declare Function cnc_search% Lib "fwlib32.dll" Alias "cnc_searcho8" (ByVal FlibHndl%, ByVal a&)
#Else
Declare Function cnc_search% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%)
#End If

' delete all programs
Declare Function cnc_delall% Lib "fwlib32.dll" (ByVal FlibHndl%)

' delete specified program
#If ONO8D Then
Declare Function cnc_delete% Lib "fwlib32.dll" Alias "cnc_deleteo8" (ByVal FlibHndl%, ByVal a&)
#Else
Declare Function cnc_delete% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%)
#End If

' read program directory
#If ONO8D Then
Declare Function cnc_rdprogdir% Lib "fwlib32.dll" Alias "cnc_rdprogdiro8" (ByVal FlibHndl%, ByVal a%, ByVal b&, ByVal c&, ByVal d&, Odb As PRGDIR)
#Else
Declare Function cnc_rdprogdir% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b%, ByVal c%, ByVal d&, Odb As PRGDIR)
#End If

' read program information
Declare Function cnc_rdproginfo% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a%, ByVal b%, Odb As Any)

' read program number under execution
#If ONO8D Then
Declare Function cnc_rdprgnum% Lib "fwlib32.dll" Alias "cnc_rdprgnumo8" (ByVal FlibHndl%, Odb As ODBPRO)
#Else
Declare Function cnc_rdprgnum% Lib "fwlib32.dll" (ByVal FlibHndl%, Odb As ODBPRO)
#End If

' read sequence number under execution
Declare Function cnc_rdseqnum% Lib "fwlib32.dll" (ByVal FlibHndl%, Odb As ODBSEQ)

' search specified sequence number
Declare Function cnc_seqsrch% Lib "fwlib32.dll" (ByVal FlibHndl%, ByVal a&)

' rewind cursor of NC program
Declare Function cnc_rewind% Lib "fwlib32.dll" (ByVal FlibHndl%)

' read block counter
Declare Function cnc_rdblkcount% Lib "fwlib32.dll" (ByVal FlibHndl%, a&)
